tools/message-compiler/src/snapshots/message_compiler__compiler_rust__tests__generate_metadata_test.snap
---
source: src/compiler_rust.rs
expression: "prettyplease::unparse(&syn::parse_file(&meta.to_string()).unwrap())"
---
#[derive(Serialize, Deserialize, Debug, Clone)]
pub struct Metadata {
    pub foo: u8,
    pub bar: u64,
}

